fix(layout): remove extra padding for `Cell` inside `Select`

--- a/projects/layout/components/cell/cell.styles.less
+++ b/projects/layout/components/cell/cell.styles.less
@@ -220,6 +220,7 @@
     }
 
     [tuiOption] &,
+    tui-textfield &,
     tui-primitive-textfield & {
         padding: 0;
     }
